--- a/_layout.jade
+++ b/_layout.jade
@@ -10,7 +10,8 @@ html(lang='en')
   body
     #page
       header
-        h1 #{title}
+        h1
+          a(href="index.html") #{title}
       != yield
       footer
         p © #{new Date().getFullYear()} #{owner}
