--- a/_layout.ejs
+++ b/_layout.ejs
@@ -11,6 +11,7 @@
     <div class="wrapper">
       <nav>
         <h2><a href="index.html"><%= owner %></a></h2>
+        <h2><a href="grid.html"><%= owner %></a></h2>
       </nav>
       <%- yield %>
       <footer>
