--- a/css/main.css
+++ b/css/main.css
@@ -94,12 +94,6 @@ footer p {
   line-height: .8;
 }
 
-.show-category,
-.grid-category {
-  visibility: visible;
-  color: inherit!important; /* overrides color change on f-b hover */
-}
-
 /* show portrait-breaks */
 .p-br {
   display: inline-block;
@@ -110,8 +104,38 @@ footer p {
   display: none;
 }
 
-.active {
-  visibility: visible;
+/* GRID */
+
+.grid {
+  /*width: 100%;*/
+  /*height: 100%;*/
+  margin: 0 .75rem;
+  flex: 1;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-content: flex-start;
+  visibility: hidden;
+}
+
+.card {
+  flex: 1 0 33.33%;
+  padding: 1vw;
+}
+
+.card-content {
+  width: 100%;
+  height: 100%;
+  background-clip: content-box;
+  position: relative;
+}
+
+.card-image {
+  width: 100%;
+  height: 100%;
+  border-style: none;
+  vertical-align: middle;
+  opacity: .05;
 }
 
 @media screen and (orientation: landscape) {
