--- a/grid.ejs
+++ b/grid.ejs
@@ -2,7 +2,7 @@
   <!-- 1 -->
   <div class="print-design card">
     <div class="orchid card-content">
-      <img class="card-image" src="src/images/image1_091217.jpg" alt="NYU Shanghai print material">
+      <img class="card-image" src="images/image1_091217.jpg" alt="NYU Shanghai print material">
       <div class="text">
         <p>NYU Shanghai Identity and Print Material</p>
         <p>Client: NYU</p>
@@ -11,7 +11,7 @@
   </div>
   <div class="exhibition-design card">
     <div class="teal card-content">
-      <img class="card-image" src="src/images/image2_082517.jpg" alt="Charles Dickens exhibition">
+      <img class="card-image" src="images/image2_082517.jpg" alt="Charles Dickens exhibition">
       <div class="text">
         <p>Charles Dickens: The Key to Character*</p>
         <p>Client: New York Public Library</p>
@@ -23,7 +23,7 @@
   </div>
   <div class="illustration card">
     <div class="silver card-content">
-      <img class="card-image" src="src/images/image3_091217.jpg" alt="butterfly">
+      <img class="card-image" src="images/image3_091217.jpg" alt="butterfly">
       <div class="text">
         <p>butterfly</p>
         <p>butterfly</p>
@@ -33,7 +33,7 @@
   </div>
   <div class="print-design card">
     <div class="orchid card-content">
-      <img class="card-image" src="src/images/image4_082517.jpg" alt="NYU Abu Dhabi book">
+      <img class="card-image" src="images/image4_082517.jpg" alt="NYU Abu Dhabi book">
       <div class="text">
         <p>NYU Abu Dhabi Reflections Book</p>
         <p>Client: NYU</p>
@@ -43,7 +43,7 @@
   </div>
   <div class="special-projects card">
     <div class="gold card-content">
-      <img class="card-image" src="src/images/image5_082517.jpg" alt="Zoetrope animation">
+      <img class="card-image" src="images/image5_082517.jpg" alt="Zoetrope animation">
       <div class="text">
         <p>Zoetrope Animation</p>
         <p>Client: New York Public Library</p>
@@ -54,7 +54,7 @@
   <!-- row 2 -->
   <div class="special-projects card">
     <div class="gold card-content">
-      <img class="card-image" src="src/images/image6_091217.jpg" alt="NYU Global Programs sticker series">
+      <img class="card-image" src="images/image6_091217.jpg" alt="NYU Global Programs sticker series">
       <div class="text">
         <p>NYU Global Programs Sticker Series</p>
         <p>Client: NYU</p>
@@ -63,7 +63,7 @@
   </div>
   <div class="art-commissions card">
     <div class="rose card-content">
-      <img class="card-image" src="src/images/image7_091217.jpg" alt="New Emirati Britannica art commission">
+      <img class="card-image" src="images/image7_091217.jpg" alt="New Emirati Britannica art commission">
       <div class="text">
         <p>The New Emirati Britannica</p>
         <p>Client: Sharjah Art Foundation</p>
@@ -73,7 +73,7 @@
   </div>
   <div class="exhibition-design card">
     <div class="teal card-content">
-      <img class="card-image" src="src/images/image8_082517.jpg" alt="Three Faiths exhibition">
+      <img class="card-image" src="images/image8_082517.jpg" alt="Three Faiths exhibition">
       <div class="text">
         <p>Three Faiths</p>
         <p>Client: New York Public Library</p>
@@ -83,7 +83,7 @@
   </div>
   <div class="identity-development card">
     <div class="blue card-content">
-      <img class="card-image" src="src/images/image9_082517.jpg" alt="SSRC identity">
+      <img class="card-image" src="images/image9_082517.jpg" alt="SSRC identity">
       <div class="text">
         <p>SSRC Identity &mdash; Logo and Print Materials</p>
         <p>Client: SSRC</p>
@@ -93,7 +93,7 @@
   </div>
   <div class="illustration card">
     <div class="silver card-content">
-      <img class="card-image" src="src/images/image10_082517.jpg" alt="Lew Thomas Prize for illustration">
+      <img class="card-image" src="images/image10_082517.jpg" alt="Lew Thomas Prize for illustration">
       <div class="text">
         <p>Lewis Thomas Prize &mdash; Custom Illustration</p>
         <p>Client: The Rockefeller University</p>
@@ -103,7 +103,7 @@
   <!-- row 3 -->
   <div class="animation card">
     <div class="lemon card-content">
-      <img class="card-image" src="src/images/image11_082517.jpg" alt="Q Magazine">
+      <img class="card-image" src="images/image11_082517.jpg" alt="Q Magazine">
       <div class="text">
         <p>Q Magazine &mdash; NYU Innovations issue</p>
         <p>Client: NYU</p>
@@ -112,7 +112,7 @@
   </div>
   <div class="identity-development card">
     <div class="blue card-content">
-      <img class="card-image" src="src/images/image12_082517.jpg" alt="Ply Analytics website">
+      <img class="card-image" src="images/image12_082517.jpg" alt="Ply Analytics website">
       <div class="text">
         <p>PLY Analytics &mdash; Logo, Writing, and Website</p>
         <p>Client: PLY Analytics</p>
@@ -121,7 +121,7 @@
   </div>
   <div class="print-design card">
     <div class="orchid card-content">
-      <img class="card-image" src="src/images/image13_082517.jpg" alt="Women and Science print material">
+      <img class="card-image" src="images/image13_082517.jpg" alt="Women and Science print material">
       <div class="text">
         <p>Women &amp; Science Lecture Print Materials</p>
         <p>Client: The Rockefeller University</p>
@@ -130,7 +130,7 @@
   </div>
   <div class="special-projects card">
     <div class="gold card-content">
-      <img class="card-image" src="src/images/image14_082517.jpg" alt="Global Programs diorama">
+      <img class="card-image" src="images/image14_082517.jpg" alt="Global Programs diorama">
       <div class="text">
         <p>NYU Global Programs Diorama Windows</p>
         <p>Client: NYU</p>
@@ -140,7 +140,7 @@
   </div>
   <div class="identity-development card">
     <div class="blue card-content">
-      <img class="card-image" src="src/images/image15_082517.jpg" alt="Science Saturday">
+      <img class="card-image" src="images/image15_082517.jpg" alt="Science Saturday">
       <div class="text">
         <p>Science Saturday</p>
         <p>Science Saturday</p>
