--- a/css/main.css
+++ b/css/main.css
@@ -109,27 +109,29 @@ footer p {
   flex-flow: row wrap;
   justify-content: space-around;
   align-content: flex-start;
+  margin: 0 -.5rem;
 }
 
 .card {
-  flex: 1 0 33.33%;
-  padding-right: .75rem;
+  flex: 1 0 33.3333%;
+  padding: .4rem;
 }
-
-div.card:nth-child(3n) {
-  padding-right: 0;
-  padding-top: .75rem;
+/*div.card:nth-child(3n+1) {
+  padding-right: 1rem;
 }
-
-div.card:nth-child(3) {
-  padding-top: 0;
+div.card:nth-child(3n+2) {
+  padding: 0 .5rem;
 }
-
+div.card:nth-child(3n+3) {
+  padding-left: 1rem;
+}
 div.card:nth-child(n+4) {
-  padding-top: .75rem;
-}
+  padding-top: 2rem;
+}*/
 
 .card-content {
+  width: 100%;
+  height: 100%;
   background-clip: content-box;
 }
 
@@ -198,23 +200,56 @@ div.card:nth-child(n+4) {
     display: none;
   }
   .grid {
-    /*width: 75vw;*/
-    margin-left: -.75rem;
+    width: 75vw;
   }
   .card {
     flex: 1 0 20%;
-    padding-right: 1.5rem;
+    padding: .75rem .5rem;
   }
-  div.card:nth-child(3n) {
-    padding-right: 1.5rem;
+  /*div.card:nth-child(3n+1) {
+    padding-right: 0;
+  }
+  div.card:nth-child(3n+2) {
+    padding: 0;
+  }
+  div.card:nth-child(3n+3) {
+    padding-left: 0;
   }
   div.card:nth-child(n+4) {
     padding-top: 0;
+  }*/
+
+  /*div.card:nth-child(5n+1) {
+    padding-right: .5rem;
+  }
+  div.card:nth-child(5n+2) {
+    padding-left: .5rem;
+  }
+  div.card:nth-child(5n+3) {
+    padding: 0 1rem;
+  }
+  div.card:nth-child(5n+4) {
+    padding-right: .5rem;
   }
   div.card:nth-child(5n) {
-    padding-right: 0;
+    padding-left: .5rem;
   }
   div.card:nth-child(n+6) {
-    padding-top: 1.5rem;
+    padding-top: 2rem;
+  }*/
+
+  /*div.card:nth-child(5n+1) {
+    padding-right: 1rem;
   }
+  div.card:nth-child(5n+2),
+  div.card:nth-child(5n+3),
+  div.card:nth-child(5n+4) {
+    padding: 0 .5rem;
+  }
+  div.card:nth-child(5n) {
+    padding-left: 1rem;
+  }
+  div.card:nth-child(n+6) {
+    padding-top: 2rem;
+  }*/
 }
