--- a/css/main.css
+++ b/css/main.css
@@ -35,12 +35,13 @@ a {
 }
 
 .wrapper {
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   margin: 0 1rem;
+  /*height: 100%;*/
+  /*min-height: 100%;*/
 }
 
 /* HEADER */
@@ -70,6 +71,15 @@ footer {
 
 footer p {
   padding: 1rem 0;
+}
+
+/* container */
+
+.container {
+  position: relative;
+}
+.container .active {
+  position: absolute;
 }
 
 /* LANDING */
@@ -103,8 +113,11 @@ footer p {
 
 /* GRID */
 
-.grid {
+.grid-wrapper {
   flex: 1;
+}
+
+.grid {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
@@ -200,7 +213,7 @@ div.card:nth-child(n+4) {
     display: none;
   }
   .grid {
-    width: 75vw;
+    width: 70vw;
   }
   .card {
     flex: 1 0 20%;
