Start configuration of grid/layout interplay

--- a/_layout.ejs
+++ b/_layout.ejs
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <nav>
         <h2><a href="index.html">Fluora</a></h2>
-        <h2><a href="grid.html">Studio</a></h2>
+        <h2><a href="work.html">Studio</a></h2>
       </nav>
       <div class="container">
         <%- yield %>
