--- a/_landing.ejs
+++ b/_landing.ejs
@@ -1,4 +1,4 @@
-<section class="landing active">
+<section class="landing">
   <h1>
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
     <span class="print-design f-b"><span class="u-l">print design</span>,</span>
@@ -20,3 +20,4 @@
     <span class="art-commissions f-b"><span class="u-l">art commissions</span>.</span><br>Click <span id="work" class="u-l">here</span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span id="contact" class="u-l contact">contact us</span> if you'd<br> like to learn more.</span>
   </h1>
 </section>
+<%- partial('_grid') %>
