--- a/public/_layout.ejs
+++ b/public/_layout.ejs
@@ -10,8 +10,12 @@
   <body>
     <div class="wrapper">
       <nav>
-        <h2><a href="index.html">Fluora</a></h2>
-        <h2><a href="work.html">Studio</a></h2>
+        <h2>
+          <a href="/index.html">Fluora</a>
+        </h2>
+        <h2>
+          <a href="/work.html">Studio</a>
+        </h2>
       </nav>
       <div class="container">
         <%- yield %>
