--- a/_layout.ejs
+++ b/_layout.ejs
@@ -9,17 +9,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <nav>
-        <h2>
-          <a href="/index.html">Fluora</a>
-        </h2>
-        <h2>
-          <a href="/work.html">Studio</a>
-        </h2>
-      </nav>
-      <div class="container">
-        <%- yield %>
-      </div>
+      <%- partial('_nav') %>
+      <%- yield %>
       <footer>
         <p>&copy; <%= new Date().getFullYear() %> <%= owner %></p>
       </footer>
