--- a/_nav.ejs
+++ b/_nav.ejs
@@ -3,6 +3,6 @@
     <a href="/">Fluora</a>
   </h2>
   <h2 class="<%- current.source == 'work' ? 'active' : '' %>">
-    <a href="/work">Studio</a>
+    <a href="/work">&nbsp;Studio</a>
   </h2>
 </nav>
