Set landing/grid active/hidden toggle

--- a/work.ejs
+++ b/work.ejs
@@ -1,4 +1,4 @@
-<section class="grid">
+<section class="<%- current.source == 'work'? 'grid active' : 'grid hidden'%>">
   <div class="print-design card">
     <div class="orchid card-content">
       <img class="card-image" src="images/image1_091217.jpg" alt="NYU Shanghai print material">
