Change work/ to work.ejs

--- a/_nav.ejs
+++ b/_nav.ejs
@@ -1,8 +1,8 @@
 <nav>
-  <h2 class="<%- current.source == 'index' ? 'active' : '' %>">
+  <h2 class="<%- current.source == 'index' ? 'current' : '' %>">
     <a href="/">Fluora</a>
   </h2>
-  <h2 class="<%- current.source == 'work' ? 'active' : '' %>">
+  <h2 class="<%- current.source == 'work' ? 'current' : '' %>">
     <a href="/work">&nbsp;Studio</a>
   </h2>
 </nav>
