--- a/index.ejs
+++ b/index.ejs
@@ -1,7 +1,7 @@
-<section class="<%- current.source == 'index'? 'landing active' : 'landing hidden'%>">
+<section class="landing <%- current.source == 'index'? 'active' : 'hidden'%>">
   <h1>
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
-    <span class="print-design f-b"><a href="print-design" class="u-l">print design</a>,</span>
+    <span class="print-design f-b"><a href="work/print-design" class="u-l">print design</a>,</span>
     <span class="illustration f-b"><span class="u-l">illustration</span>,</span><br>
     <span class="identity-development f-b"><span class="u-l">identity development</span>,</span><br class="p-br">
     <!-- portrait-break (p-br) button show in portrait view -->
