--- a/_layout.ejs
+++ b/_layout.ejs
@@ -18,26 +18,6 @@
       </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('.landing.active a').each(function () {
-          var href = $(this).attr('href')
-          var grid = $('.grid')
-
-          $(this).on( {
-
-            'mouseenter': function(e) {
-              e.preventDefault()
-              cards = grid.find('.' + href + '')
-              cards.children().addClass('active')
-            },
-            'mouseleave': function (e) {
-              e.preventDefault()
-              cards.children().removeClass('active')
-            }
-          })
-        })
-      })
-    </script>
+    <script src="js/landing.js"></script>
   </body>
 </html>
