jquery click handles landing/grid toggle for categories

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,9 @@ footer p {
 .landing.active {
   position: absolute;
 }
+.landing a.active {
+  z-index: 2;
+}
 .hidden {
   visibility: hidden;
 }
@@ -131,18 +134,15 @@ footer p {
 
 /* landing links colorized */
 
-.print-design:hover,
-.print-design.hover {
+.print-design:not(.active):hover {
   color: rgb(210, 157, 198);
 }
 
-.illustration:hover,
-.illustration.hover {
+.illustration:hover {
   color: rgb(170, 170, 170);
 }
 
-.identity-development:hover,
-.identity-development.hover {
+.identity-development:hover {
   color: rgb(145,174,196);
 }
 
@@ -151,18 +151,15 @@ footer p {
   color: rgb(90, 171, 183);
 }
 
-.special-projects:not(.no-hover):hover,
-.special-projects.hover:not(.no-hover) {
+.special-projects:hover {
   color: rgb(154, 147, 120);
 }
 
-.animation:hover,
-.animation.hover {
+.animation:hover {
   color: rgb(209, 205, 110);
 }
 
-.art-commissions:hover,
-.art-commissions.hover {
+.art-commissions:hover {
   color: rgb(182, 126, 119);
 }
 
