--- a/index.ejs
+++ b/index.ejs
@@ -2,11 +2,13 @@
   <h1>
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
     <a href="print-design" class="print-design f-b"><span class="u-l">print design</span>,</a>
-    <%# <span class="print-design f-b"><a href="print-design" class="u-l">print design</a>,</span>%>
     <a href="illustration" class="illustration f-b"><span class="u-l">illustration</span>,</a><br>
     <a href="identity-development" class="identity-development f-b"><span class="u-l">identity development</span>,</a><br class="p-br">
-    <!-- portrait-break (p-br) button show in portrait view -->
-    <!-- landscape-break (l-br) button show in landscape view -->
+    <!--
+      for buttons that breaks across lines:
+      portrait-break (p-br) shows in portrait view
+      landscape-break (l-br) shows in landscape view
+    -->
     <a href="exhibition-design" class="exhibition-design f-b p-br"><span class="u-l">exhibition design</span>,</a>
     <a href="exhibition-design" class="exhibition-design" class="exhibition-design">
       <span class="exhibition-design f-b l-br"><span class="u-l">exhibition</span></span><br class="l-br">
@@ -16,10 +18,6 @@
       <span class="special-projects f-b p-br"><span class="u-l">special</span></span><br class="p-br">
       <span class="special-projects f-b p-br"> <span class="u-l">projects</span>,</span>
     </a>
-    <%# <span class="special-projects">
-      <span class="special-projects f-b p-br"><span class="u-l">special</span></span><br class="p-br">
-      <span class="special-projects f-b p-br"> <span class="u-l">projects</span>,</span>
-    </span>%>
     <a href="special-projects" class="special-projects f-b l-br"><span class="u-l">special projects</span>,</a>
     <a href="animation" class="animation f-b"><span class="u-l">animation</span>,</a><br class="l-br"> and<br class="p-br"> sometimes
     <a href="art-commissions" class="art-commissions f-b"><span class="u-l">art commissions</span>.</a><br>Click <span id="work" class="u-l">here</span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span id="contact" class="u-l contact">contact us</span> if you'd<br> like to learn more.</span>
