Make landing text a partial

--- a/work.ejs
+++ b/work.ejs
@@ -148,3 +148,7 @@
     </div>
   </div>
 </section>
+
+<section class="landing <%- current.source == 'index'? 'active' : 'hidden'%>">
+  <%- partial('_landing') %>
+</section>
