--- a/_layout.ejs
+++ b/_layout.ejs
@@ -19,5 +19,6 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/landing.js"></script>
+    <script src="js/grid.js"></script>
   </body>
 </html>
