--- a/work.ejs
+++ b/work.ejs
@@ -1,83 +1,15 @@
 <% if (current.source == 'work') { %>
   <%- partial('_landing') %>
 <% } %>
-<section class="grid <%- current.source == 'work' ? 'active' : 'hidden' %>">
-  <div class="print-design card">
-    <div class="orchid card-content">
-      <img class="card-image" src="images/image1_091217.jpg" alt="NYU Shanghai print material">
+
+<section class="grid <%- current.source == 'work' ? 'active' : 'hidden'%>">
+
+<% Object.entries(work).forEach(function ([cardId, cardData]) { %>
+  <div class="<%= cardData.category %> card">
+    <div class="<%= cardData.color %> card-content">
+    <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
     </div>
   </div>
-  <div class="exhibition-design card">
-    <div class="teal card-content">
-      <img class="card-image" src="images/image2_082517.jpg" alt="Charles Dickens exhibition">
-    </div>
-  </div>
-  <div class="illustration card">
-    <div class="silver card-content">
-      <img class="card-image" src="images/image3_091217.jpg" alt="butterfly">
-    </div>
-  </div>
-  <div class="print-design card">
-    <div class="orchid card-content">
-      <img class="card-image" src="images/image4_082517.jpg" alt="NYU Abu Dhabi book">
-    </div>
-  </div>
-  <div class="special-projects card">
-    <div class="gold card-content">
-      <img class="card-image" src="images/image5_082517.jpg" alt="Zoetrope animation">
-    </div>
-  </div>
-  <!-- row 2 -->
-  <div class="special-projects card">
-    <div class="gold card-content">
-      <img class="card-image" src="images/image6_091217.jpg" alt="NYU Global Programs sticker series">
-    </div>
-    </div>
-  </div>
-  <div class="art-commissions card">
-    <div class="rose card-content">
-      <img class="card-image" src="images/image7_091217.jpg" alt="New Emirati Britannica art commission">
-    </div>
-  </div>
-  <div class="exhibition-design card">
-    <div class="teal card-content">
-      <img class="card-image" src="images/image8_082517.jpg" alt="Three Faiths exhibition">
-    </div>
-  </div>
-  <div class="identity-development card">
-    <div class="blue card-content">
-      <img class="card-image" src="images/image9_082517.jpg" alt="SSRC identity">
-    </div>
-  </div>
-  <div class="illustration card">
-    <div class="silver card-content">
-      <img class="card-image" src="images/image10_082517.jpg" alt="Lew Thomas Prize for illustration">
-    </div>
-  </div>
-  <!-- row 3 -->
-  <div class="animation card">
-    <div class="lemon card-content">
-      <img class="card-image" src="images/image11_082517.jpg" alt="Q Magazine">
-    </div>
-  </div>
-  <div class="identity-development card">
-    <div class="blue card-content">
-      <img class="card-image" src="images/image12_082517.jpg" alt="Ply Analytics website">
-    </div>
-  </div>
-  <div class="print-design card">
-    <div class="orchid card-content">
-      <img class="card-image" src="images/image13_082517.jpg" alt="Women and Science print material">
-    </div>
-  </div>
-  <div class="special-projects card">
-    <div class="gold card-content">
-      <img class="card-image" src="images/image14_082517.jpg" alt="Global Programs diorama">
-    </div>
-  </div>
-  <div class="identity-development card">
-    <div class="blue card-content">
-      <img class="card-image" src="images/image15_082517.jpg" alt="Science Saturday">
-    </div>
-  </div>
+<% }) %>
+
 </section>
