Get everything working up til cards.js

--- a/_landing.ejs
+++ b/_landing.ejs
@@ -1,4 +1,4 @@
-<section class="landing <%- current.source == 'index' ? 'active' : 'hidden' %>">
+<section class="landing <%- current.source != 'index' ? 'hidden' : 'active' %>">
   <h1>
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
     <a href="print-design" class="print-design f-b"><span class="u-l">print design</span>,</a>
