--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ footer p {
 }
 
 .card-content {
+  display: block;
   width: 100%;
   height: 100%;
   background-clip: content-box;
@@ -211,12 +212,10 @@ footer p {
 .active,
 .current {
   visibility: visible;
-  z-index: 2;
 }
 
 .hidden {
   visibility: hidden;
-  z-index: 1;
 }
 
 .current {
@@ -231,6 +230,9 @@ footer p {
   z-index: 2;
 }
 
+.landing.hidden .current {
+  color: inherit;
+}
 
 .card-content.faded {
   opacity: .2;
