Changes to landing html and js

--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ footer p {
 
 /* jQuery play for landing-grid hover-toggle */
 
-/* colorized */
+/* colorized links */
 
 .print-design.current {
   color: rgb(210, 157, 198);
