--- a/_landing.ejs
+++ b/_landing.ejs
@@ -1,25 +1,24 @@
 <section class="landing <%- current.source != 'index' ? 'hidden' : 'active' %>">
   <h1>
+    <!--  portrait-break (p-br) is active in portrait view
+          landscape-break (l-br) is active in landscape view -->
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
-    <a href="print-design" class="print-design f-b"><span class="u-l">print design</span>,</a>
-    <a href="illustration" class="illustration f-b"><span class="u-l">illustration</span>,</a><br>
-    <a href="identity-development" class="identity-development f-b"><span class="u-l">identity development</span>,</a><br class="p-br">
-    <!--
-    for buttons that breaks across lines:
-    portrait-break (p-br) shows in portrait view
-    landscape-break (l-br) shows in landscape view
-    -->
-    <a href="exhibition-design" class="exhibition-design f-b p-br"><span class="u-l">exhibition design</span>,</a>
-    <a href="exhibition-design" class="exhibition-design" class="exhibition-design">
+    <span><a href="print-design" class="print-design f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">print design</a>,</span>
+    <span><a href="illustration" class="illustration f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">illustration</a>,</span><br>
+    <span><a href="identity-development" class="identity-development f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">identity development</a>,</span><br class="p-br">
+    <span class="p-br"><a href="exhibition-design" class="exhibition-design f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">exhibition design</a>,</span>
+    <span><a href="exhibition-design" class="exhibition-design <%- current.source != 'index' ? '' : 'hot' %>">
       <span class="exhibition-design f-b l-br"><span class="u-l">exhibition</span></span><br class="l-br">
-      <span class="exhibition-design f-b l-br"><span class="u-l">design</span>,</span>
-    </a>
-    <a href="special-projects" class="special-projects">
-      <span class="special-projects f-b p-br"><span class="u-l">special</span></span><br class="p-br">
+      <span class="exhibition-design f-b l-br <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">design</span>,</span>
+    </a></span>
+    <span><a href="special-projects" class="special-projects <%- current.source != 'index' ? '' : 'hot' %>">
+      <span class="special-projects f-b p-br <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">special</span></span><br class="p-br">
       <span class="special-projects f-b p-br"> <span class="u-l">projects</span>,</span>
-    </a>
-    <a href="special-projects" class="special-projects f-b l-br"><span class="u-l">special projects</span>,</a>
-    <a href="animation" class="animation f-b"><span class="u-l">animation</span>,</a><br class="l-br"> and<br class="p-br"> sometimes
-    <a href="art-commissions" class="art-commissions f-b"><span class="u-l">art commissions</span>.</a><br>Click <span id="work" class="u-l">here</span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span id="contact" class="u-l contact">contact us</span> if you'd<br> like to learn more.</span>
+    </a></span>
+    <span class="l-br"><a href="special-projects" class="special-projects f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">special projects</a>,</span>
+    <span><a href="animation" class="animation f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">animation</a>,</span>
+    <br class="l-br"> and<br class="p-br"> sometimes
+    <span><a href="art-commissions" class="art-commissions f-b <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">art commissions</a>.</span>
+    <br>Click <span id="work" class="u-l">here</span> to view some<br class="p-br"> samples of<br class="l-br"> our work.<br class="p-br"> Please <span id="contact" class="u-l contact">contact us</span> if you'd<br> like to learn more.</span>
   </h1>
 </section>
