--- a/_landing.ejs
+++ b/_landing.ejs
@@ -1,5 +1,5 @@
 <section class="landing <%- current.source != 'index' ? 'hidden' : 'active' %>">
-  <h1>
+  <h1 id="menu">
     <!--  portrait-break (p-br) is active in portrait view
           landscape-break (l-br) is active in landscape view -->
     Fluora Studio is a design<br class="p-br"> service<br class="l-br"> specializing in<br class="p-br">
