Deactive category links in cards view

--- a/css/main.css
+++ b/css/main.css
@@ -230,7 +230,8 @@ footer p {
   z-index: 2;
 }
 
-.landing.hidden h1 span a.current {
+.landing.hidden h1 span a.current,
+.landing.hidden h1 span a.active {
   pointer-events: none;
 }
 
