Add source to all samples from landing, samples by category from cards

--- a/samples/_layout.ejs
+++ b/samples/_layout.ejs
@@ -2,6 +2,10 @@
 
 <section class='slideshow'>
 
-  <%- partial('' + source + '') %>
+  <% if (source == 'index') { %>
+    <%- partial('index') %>
+  <% } else { %>
+    <%- partial('' + source + '') %>
+  <% } %>
 
 </section>
