Remove layout from samples subfolder

--- a/_layout.ejs
+++ b/_layout.ejs
@@ -18,8 +18,8 @@
       </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/landing.js"></script>
-    <script src="js/grid.js"></script>
-    <script src="js/cards.js"></script>
+    <script src="/js/landing.js"></script>
+    <script src="/js/grid.js"></script>
+    <script src="/js/cards.js"></script>
   </body>
 </html>
