--- a/css/main.css
+++ b/css/main.css
@@ -126,54 +126,56 @@ footer p {
   align-content: flex-start;
 }
 
-.card {
+.grid .card {
   flex: 1 0 33.3333%;
   padding: 1vw;
 }
 
-.card-content {
+.grid .card-content {
   display: block;
   width: 100%;
   height: 100%;
-  background-clip: content-box;
 }
 
-.card-image {
+.grid .card-image {
   width: 100%;
   height: 100%;
   border-style: none;
   vertical-align: middle;
+}
+
+.grid .card-image {
   opacity: .05;
 }
 
 /* card colors */
 
-.orchid {
+.grid .orchid {
   background-color: rgb(210, 157, 198);
 }
 
-.silver {
+.grid .silver {
   background-color: rgb(170, 170, 170);
 }
 
-.blue {
+.grid .blue {
   background-color: rgb(145,174,196);
 }
 
-.teal {
+.grid .teal {
   background-color: rgb(90, 171, 183);
 }
 
-.gold {
+.grid .gold {
   background-color: rgb(154, 147, 120);
   border-radius: 50%;
 }
 
-.lemon {
+.grid .lemon {
   background-color: rgb(209, 205, 110);
 }
 
-.rose {
+.grid .rose {
   background-color: rgb(182, 126, 119);
 }
 
