--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,7 @@ footer p {
   .grid {
     margin-right: 5vw;
   }
-  .card {
+  .grid .card {
     flex: 1 0 20%;
     padding: .2rem .2rem .6rem;
   }
@@ -294,7 +294,7 @@ footer p {
     font-size: 4.2vw;
     line-height: 1.3;
   }
-  .card {
+  .grid .card {
     padding: .75rem .5rem;
   }
 }
