--- a/samples/index.ejs
+++ b/samples/index.ejs
@@ -3,10 +3,14 @@
   <div class="<%= cardData.category %> card">
     <div class="<%= cardData.color %> card-content">
       <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
-      <p><%= cardData.title %></p>
-      <p><%= cardData.client %></p>
-      <p><%= cardData.contributor %></p>
-      <p><%= cardData.award %></p>
+      <p>Client: <%= cardData.client %></p>
+      <p>Project: <%= cardData.title %></p>
+      <% if(cardData.contributor) { %>
+        <p>With: <%= cardData.contributor %></p>
+      <% } %>
+      <% if(cardData.award) { %>
+        <p>* <%= cardData.award %></p>
+      <% } %>
     </div>
   </div>
 
