--- a/_layout.ejs
+++ b/_layout.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/slideshow.css">
+    <link rel="stylesheet" type="text/css" href="/css/contact.css">
   </head>
   <body>
     <div class="wrapper">
