--- a/samples/_layout.ejs
+++ b/samples/_layout.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/css/slideshow.css">
   </head>
   <body>
-    <div class="slide-wrapper">
+    <div class="wrapper">
       <%- partial('../_nav') %>
       <div id="slideshow">
         <div class="row">
