fix navbar and remove class conditional

--- a/_nav.ejs
+++ b/_nav.ejs
@@ -1,8 +1,6 @@
 <nav>
-  <h2 class="<%- current.source == 'index' ? 'current' : '' %>">
-    <a href="/">Fluora</a>
-  </h2>
-  <h2 class="<%- current.source == 'work' ? 'current' : '' %>">
-    <a href="/work">&nbsp;Studio</a>
+  <h2>
+    <span><a href="/">Fluora </a></span>
+    <span><a href="/work">Studio</a></span>
   </h2>
 </nav>
