--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,14 @@ html, body {
   height: 100%;
 }
 
+section, div, nav, footer , ul {
+  display: block;
+}
+
+p, li, h1, h2, h3, h4 {
+  display: inline-block;
+}
+
 h1, h2, h3, h4 {
   font-weight: normal;
 }
@@ -35,9 +43,9 @@ a {
 }
 
 .wrapper {
+  width: 100%;
   height: 100%;
   min-height: 100%;
-  width: 100%;
   padding-left: 2vw;
   display: flex;
   flex-wrap: wrap;
@@ -53,28 +61,29 @@ nav, footer, .landing {
 
 nav {
   width: 100%;
+  height: 9vh;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 nav h2 {
-  font-size: 2.5vh;
-  height: 6vh;
-  padding: 1rem 0 .75rem;
+  font-size: 5vw;
 }
 
 /* FOOTER */
 
 footer {
   width: 100%;
+  height: 8vh;
   margin-top: auto;
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 footer p {
-  font-size: 2vh;
-  height: 5vh;
-  padding: .5rem 0;
+  font-size: 3vw;
 }
 
 /* container */
@@ -95,32 +104,30 @@ footer p {
 }
 
 .landing h1 {
+  padding-top: .2em;
   font-size: 7vw;
-  line-height: 1.7;
-}
-
-.f-b, .u-l {
-  display: inline-block;
+  line-height: 1.6;
 }
 
 .u-l {
+  display: inline-block;
   border-bottom: solid .05em; /* fancy underline */
-  line-height: .8;
+  line-height: .9;
 }
 
 .p-br {
-  display: inline-block; /* show portrait-breaks */
+  display: inline; /* visible in portrait view */
 }
 
 .l-br {
-  display: none; /* hide landscape-breaks */
+  display: none; /* hidden in landscape view */
 }
 
 /* GRID */
 
 .grid {
-  width: 95vw;
-  flex: 1;
+  width: 90vw;
+  margin-left: -.2em;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
@@ -251,7 +258,7 @@ footer p {
     padding-left: 4vw;
   }
   .grid {
-    width: 80vw;
+    width: 75vw;
   }
   nav, footer, .landing {
     margin-left: 1vw;
@@ -281,17 +288,16 @@ footer p {
 
 @media screen and (orientation: landscape) and (min-width: 750px) {
   nav h2 {
-    font-size: 1.7rem;
-    padding: 1.5rem 0;
+    font-size: 2vw;
   }
   footer p {
-    font-size: 1rem;
+    font-size: 1.2vw;
   }
   .landing h1 {
     font-size: 4.2vw;
     line-height: 1.3;
   }
   .grid .card {
-    padding: .75rem .5rem;
+    padding: 1vw 1vh;
   }
 }
