Add test for environment

--- a/_layout.ejs
+++ b/_layout.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/contact.css">
   </head>
   <body>
+    <%- partial('_test') %>
     <div class="wrapper">
       <%- partial('_nav') %>
       <div class="container">
