Move _cards partial to root and add conditional to _layout for work

--- a/samples/_layout.ejs
+++ b/samples/_layout.ejs
@@ -13,7 +13,11 @@
       <%- partial('../_nav') %>
       <div id="slideshow">
         <div class="row">
-          <%- yield %>
+          <% if(current.source == 'work') { %>
+            <%- partial('work') %>
+          <% else %>
+            <%- yield %>
+          <% } %>
         </div>
       </div>
       <footer>
