Change current conditionals and remove _layout from work/

--- a/_landing.ejs
+++ b/_landing.ejs
@@ -1,4 +1,4 @@
-<section class="landing <%- current.source != 'index' ? 'hidden' : 'active' %>">
+<section class="landing <%- current.path[0] == 'work' ? 'hidden' : 'active' %>">
   <h1 id="menu">
     <!--  portrait-break (p-br) is active in portrait view
           landscape-break (l-br) is active in landscape view -->
