--- a/work/index.ejs
+++ b/work/index.ejs
@@ -1,17 +1,8 @@
-<% Object.entries(work).forEach(function ([cardId, cardData]) { %>
-
-  <div class="<%= cardData.category %> card">
-    <div class="<%= cardData.color %> card-content">
-      <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
-      <p>Client: <%= cardData.client %></p>
-      <p>Project: <%= cardData.title %></p>
-      <% if(cardData.contributor) { %>
-        <p>With: <%= cardData.contributor %></p>
-      <% } %>
-      <% if(cardData.award) { %>
-        <p>* <%= cardData.award %></p>
-      <% } %>
-    </div>
+<% if (current.path[0] == 'work' && current.source == 'index') { %>
+  <div class="container">
+    <section class="grid active">
+      <%- partial('../_cards') %>
+    </section>
+      <%- partial('../_landing') %>
   </div>
-
-<% }) %>
+<% } %>
