Change samples to work globally

--- a/_cards.ejs
+++ b/_cards.ejs
@@ -1,6 +1,6 @@
 <% Object.entries(work).forEach(function ([cardId, cardData]) { %>
 
-  <a href="samples/<%= cardData.category %>" class="<%= cardData.category %> card">
+  <a href="work/<%= cardData.category %>" class="<%= cardData.category %> card">
     <div class="<%= cardData.color %> card-content">
       <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
     </div>
