--- a/_layout.ejs
+++ b/_layout.ejs
@@ -19,12 +19,13 @@
       <footer>
         <p>&copy; <%= new Date().getFullYear() %> <%= owner %></p>
       </footer>
-      
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/js/landing.js"></script>
     <script src="/js/grid.js"></script>
     <script src="/js/cards.js"></script>
     <script src="/js/here.js"></script>
+    <script src="/js/slideshow.js"></script>
   </body>
 </html>
