--- a/_landing.ejs
+++ b/_landing.ejs
@@ -19,6 +19,6 @@
     <span class="animation"><a href="animation" class="animation f-b u-l <%- current.source != 'index' ? '' : 'hot' %>">animation</a>,</span>
     <br class="l-br"> and<br class="p-br"> sometimes
     <span class="art-commissions"><a href="art-commissions" class="art-commissions f-b <%- current.source != 'index' ? '' : 'hot' %>"><span class="u-l">art commissions</a>.</span>
-    <br>Click <span><a href="work" class="work u-l">here</a></span> to view some<br class="p-br"> work of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="contact" class="contact u-l">contact us</a></span> if you'd<br> like to learn more.</span>
+    <br>Click <span><a href="samples" class="work u-l">here</a></span> to view some<br class="p-br"> work of<br class="l-br"> our work.<br class="p-br"> Please <span><a href="contact" class="contact u-l">contact us</a></span> if you'd<br> like to learn more.</span>
   </h1>
 </section>
