--- a/_layout.ejs
+++ b/_layout.ejs
@@ -26,6 +26,6 @@
     <script src="/js/grid.js"></script>
     <script src="/js/cards.js"></script>
     <script src="/js/here.js"></script>
-    <script src="/js/slideshow.js"></script>
+    <%# <script src="/js/slideshow.js"></script>%>
   </body>
 </html>
