--- a/_slides.ejs
+++ b/_slides.ejs
@@ -1,27 +1,21 @@
 <div id="slideshow">
   <div class="row">
-
-    <% Object.entries(work).forEach(function ([cardId, cardData]) { %>
-
-      <% if(cardData.category == current.source || (current.path[0] == 'samples')) { %>
-
-        <div class="<%= cardData.category %> card">
-          <div class="<%= cardData.color %> card-content">
-            <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
-            <p>Client: <%= cardData.client %></p>
-            <p>Project: <%= cardData.title %></p>
-            <% if(cardData.contributor) { %>
-              <p>With: <%= cardData.contributor %></p>
-            <% } %>
-            <% if(cardData.award) { %>
-              <p>* <%= cardData.award %></p>
-            <% } %>
-          </div>
-        </div>
-
-      <% } %>
-
-    <% }) %>
-
+  <%_ Object.entries(work).forEach(function ([cardId, cardData]) { -%>
+    <%_ if (cardData.category == current.source || current.path[0] == "samples") { -%>
+    <div class="<%= cardData.category %> card">
+      <div class="<%= cardData.color %> card-content">
+        <img class="card-image" src="<%= cardData.image %>" alt="<%= cardData.title %>">
+        <p>Client: <%= cardData.client %></p>
+        <p>Project: <%= cardData.title %></p>
+        <%_ if(cardData.contributor) { -%>
+        <p>With: <%= cardData.contributor %></p>
+        <%_ } -%>
+        <%_ if(cardData.award) { -%>
+        <p>* <%= cardData.award %></p>
+        <%_ } -%>
+      </div>
+    </div>
+    <%_ } -%>
+  <%_ }) -%>
   </div>
 </div>
