--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: 'Baton Turbo Regular';
+  src: url('../fonts/BatonTurboWeb-Regular.eot') format('eot'),
+        url('../fonts/BatonTurboWeb-Regular.woff') format('woff');
+}
+
 html {
   font-size: 16px;
   line-height: 1.1;
-  font-family: Arial, Verdana, sans-serif;
+  font-family: 'Baton Turbo Regular', Arial, Verdana, sans-serif;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
